# rppg-stress-demo

./: .gitignore  .gitmodules  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: algorithms.py  health.py  measurements.py
backend/app/core/: config.py  events.py  jobs.py
backend/app/models/: registry.py
backend/app/pipeline/: consensus.py  orchestrator.py
backend/app/pipeline/algorithms/: base.py
backend/app/pipeline/algorithms/supervised/: __init__.py  _base_deep.py  bigsmall.py  deepphys.py  efficientphys.py  physformer.py  physnet.py  rhythmformer.py  ts_can.py
backend/app/pipeline/algorithms/unsupervised/: __init__.py  chrom.py  green.py  (+3 more)
backend/app/pipeline/experimental/: spo2_rgb.py
backend/app/pipeline/hrv/: freq_domain.py  nonlinear.py  peak_detect.py  time_domain.py
backend/app/pipeline/morphology/: bvp_quality.py
backend/app/pipeline/preprocess/: face_roi.py  frame_decoder.py  quality_gate.py  resample.py
backend/app/pipeline/reliability/: scoring.py  snr.py  tracking.py
backend/app/pipeline/respiration/: bvp_resp.py
backend/app/pipeline/stress/: adaptive.py  baevsky.py  coherence.py  composite.py  composite_v2.py  composite_v3.py  composite_v4.py  kubios.py
backend/app/schemas/: algorithm.py  measurement.py
backend/scripts/: download_weights.py
backend/tests/: test_api.py  test_consensus.py  test_hrv.py  test_pipeline_integration.py  test_preprocess.py  test_registry.py  test_reliability.py  test_signal_path.py  test_stress.py  test_stress_adaptive.py  test_sup_adapters.py  test_unsup_adapters.py
(+48 files in other folders)
