[project]
name = "rppg-stress-api"
version = "0.1.0"
description = "rPPG-based stress measurement demo API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "numpy>=1.26,<2.0",
    "scipy>=1.13",
    "opencv-python>=4.10",
    "mediapipe>=0.10.18",
    "torch>=2.4",
    "torchvision>=0.19",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
